# modaem

./: .gitignore  CMakeLists.txt  README.md  modaem.py
doc/: modaem-user.lyx
modaem/doc/: modaem-user.dvi  modaem-user.ps  modaem-user.tex
modaem/doc/CVS/: Entries  Repository
modaem/src/: a_tr0.f90  f_dipole.f90  f_pond.f90  i_dipole.f90  i_pond.f90  m_aem.f90  m_inq.f90  m_ls1.f90  m_wl0.f90  modaem.f90  u_constants.f90  u_io.f90  u_math.f90  u_matrix.f90
modaem/src/CVS/: Entries  Repository
modaem/tools/: contouring.f90
modaem/tools/CVS/: Entries  Repository
modaem/validation/CVS/: Repository
modaem/validation/inho_uf/: modaem.aem
modaem/validation/inho_uf/CVS/: Repository  Root
modaem/validation/linesink/: modaem.aem
modaem/validation/linesink/CVS/: Repository
modaem/validation/pond_uf/CVS/: Entries  Repository
modaem/validation/pond_uf_noflow/: modaem.aem
modaem/validation/pond_uf_noflow/CVS/: Repository
modaem/validation/well_uf/CVS/: Repository
src/: Makefile.linux.lahey  a_grid.f90  f_well.f90  i_linesink.f90  i_well.f90  m_aqu.f90  m_hb0.f90  m_in0.f90  m_ls0.f90  m_ls2.f90  m_pd0.f90  m_wl1.f90  u_grid.f90
tools/: CMakeLists.txt  contour.f90  tr0bln.f90
validation/inho_uf/: mat_report.final.grd  mat_report.pre.grd  modaem.aem  modaem.err  modaem.out  modaem_head.grd  modaem_head.m  modaem_psi.grd  modaem_psi.m
validation/linesink/: mat_report.final.grd  mat_report.pre.grd  modaem.aem  modaem.err  modaem.out  modaem_head.grd  modaem_head.m  modaem_psi.grd  modaem_psi.m
validation/pond_uf/: modaem.aem  modaem.err  modaem.out  modaem.tr0  modaem_head.grd  modaem_head.m  modaem_psi.grd  modaem_psi.m  modaem_qx.grd  modaem_qx.m  modaem_qy.grd  modaem_qy.m
validation/pond_uf_noflow/: mat_report.final.grd  mat_report.pre.grd  modaem.aem  modaem.err  modaem.out  modaem.tr0  modaem_head.grd  modaem_head.m  modaem_psi.grd  modaem_psi.m  modaem_qx.grd  modaem_qx.m  modaem_qy.grd  modaem_qy.m
validation/well_uf/: mat_report.final.grd  modaem.aem  modaem.bln  modaem.err  modaem.out  modaem.tr0  modaem_head.grd  modaem_head.m  modaem_psi.grd  modaem_psi.m
